# Code-Templates

./: README.md
.github/workflows/: express_typescript_template.yaml  python_fastapi_template.yaml  vite_react_typescript_template.yaml
Express Typescript Template/: .env.template  README.md  eslint.config.mjs  jest.config.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
Express Typescript Template/src/: app.ts  main.ts
Express Typescript Template/src/middlewares/: errorHandler.ts  httpLogger.ts
Express Typescript Template/src/routes/: index.ts
Express Typescript Template/src/utils/: constants.ts  logger.ts
Express Typescript Template/tests/routes/: index.test.ts
Python FastAPI Template/: main.py  pyproject.toml
Python FastAPI Template/app/: app.py
Python FastAPI Template/app/config/: settings.py
Python FastAPI Template/test/: test_app.py  test_constants.py
Vite React Typescript Template/: .prettierrc  README.md  eslint.config.js  package-lock.json  package.json
